<resources>
    <string name="app_name">Blood Donor</string>
    <string name="title_home">Home</string>
    <string name="title_badges">Odznaki</string>
    <string name="title_map">Mapa</string>
    <string name="title_more">Więcej</string>
    <string name="title_donation">Donacje</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Ustawienia</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Ustawienia</string>
    <string name="my_account">Moje konto</string>
    <string name="title_activity_login">Zaloguj</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj lub zarejestruj</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Niewłaściwy email</string>
    <string name="invalid_password">Hasło musi zawierać min. 5 znaków</string>
    <string name="login_failed">"Login failed"</string>
    <string name="law">Ustawa</string>
    <string name="popup1">Do uzyskania odznaki wymagane jest oddanie 5 litrów krwi w przypadku kobiet i 6 litrów krwi w przypadku mężczyzn</string>
    <string name="title_activity_maps">Map</string>

</resources>
