<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/donation">

    <fragment
        android:id="@+id/donation"
        android:name="org.example.blooddonor.ui.donations.DonationFragment"
        android:label="@string/title_donation"
        tools:layout="@layout/fragment_donation" />

    <fragment
        android:id="@+id/badges"
        android:name="org.example.blooddonor.ui.badges.BadgesFragment"
        android:label="@string/title_badges"
        tools:layout="@layout/fragment_badges" />

    <fragment
        android:id="@+id/map"
        android:name="org.example.blooddonor.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/more"
        android:name="org.example.blooddonor.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>
