<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.more.MoreFragment">

    <Button
        android:id="@+id/button_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/ic_account_button"
        android:drawableRight="@drawable/ic_arrow"
        android:drawablePadding="10dp"
        android:gravity="start|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/my_account"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button_law"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_law"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/ic_law_button"
        android:drawableRight="@drawable/ic_arrow"
        android:drawablePadding="10dp"
        android:gravity="start|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/law"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_account" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/ic_settings_button"
        android:drawableRight="@drawable/ic_arrow"
        android:drawablePadding="10dp"
        android:gravity="start|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/settings"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_law" />
</androidx.constraintlayout.widget.ConstraintLayout>